Sat Dec 21 13:00:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c: remove unnecessary the source path from EEXIST error
	  messages and show the destination path only.  [ruby-core:59202]
	  [Feature #9263]

Sat Dec 21 12:37:19 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/resolv.rb (Resolv::Hosts#lazy_initialize): should not
	  consider encodings in hosts file.  [ruby-core:59239] [Bug #9273]

	* lib/resolv.rb (Resolv::Config.parse_resolv_conf): ditto.

Sat Dec 21 05:43:27 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/make-snapshot: replace RUBY_PATCHLEVEL_STR in version.h to
	  show users that this ruby is a preview/rc version.

Sat Dec 21 05:03:49 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (fake.rb): fixed wrong RUBY_PLATFORM, to correctly
	  install win32.h.
	  [ruby-core:58801][Bug #9199] reported by arton.

Fri Dec 20 17:52:50 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c: check definition of
	  GLOBAL_METHOD_CACHE_SIZE and GLOBAL_METHOD_CACHE_MASK.

Fri Dec 20 17:03:10 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: rename OBJ_WRITE and OBJ_WRITTEN into
	  RB_OBJ_WRITE and RB_OBJ_WRITTEN.

	* array.c, class.c, compile.c, hash.c, internal.h, iseq.c,
	  proc.c, process.c, re.c, string.c, variable.c, vm.c,
	  vm_eval.c, vm_insnhelper.c, vm_insnhelper.h, 
	  vm_method.c: catch up this change.

Fri Dec 20 16:01:35 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: add a comment for WB interfaces.

Fri Dec 20 16:00:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: DLDFLAGS is defined in --with-opt-dir handler, so
	  ${DLDFLAGS=} does not work now.  use RUBY_APPEND_OPTIONS instead.
	  [ruby-dev:47855] [Bug #9256]

Fri Dec 20 14:19:12 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (AC_ARG_WITH): use withval directly.
	  fix failure on FreeBSD.
	  http://fb32.rubyci.org/~chkbuild/ruby-trunk/log/20131217T070301Z.diff.html.gz
